compile_log.txt
[  0%] Building CUDA object CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_manager.cu.o
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu(1843): error: class "cuda_zstd::CompressionWorkspace" has no member "d_literals_buffer"
      call_workspace.d_bitstream = call_workspace.d_literals_buffer;
                                                  ^

1 error detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_manager.cu".
gmake[3]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:105: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_manager.cu.o] Error 2
gmake[2]: *** [CMakeFiles/Makefile2:259: CMakeFiles/cuda_zstd_static.dir/all] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:500: CMakeFiles/test_correctness.dir/rule] Error 2
gmake: *** [Makefile:296: test_correctness] Error 2
